Petmonitor project completed

--- a/app/src/main/res/layout/activity_menu_veterinario.xml
+++ b/app/src/main/res/layout/activity_menu_veterinario.xml
@@ -11,59 +11,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/btnAddImage"
+        <ImageView
+            android:id="@+id/iconjeringa"
             android:layout_width="match_parent"
             android:layout_height="308dp"
             android:layout_marginBottom="34dp"
-            android:background="#5FFFC1"
-            android:foreground="?attr/selectableItemBackground">
+            android:src="@drawable/veterinario"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="24dp"
+            android:layout_centerVertical="true"/>
 
-            <!-- TextView centrado vertical y horizontalmente -->
-            <TextView
-                android:layout_width="241dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/titulos"
-                android:gravity="center"
-                android:text="+ Agrega tu Imagen"
-                android:textColor="@android:color/black"
-                android:textSize="30sp"
-                tools:ignore="HardcodedText" />
-
-        </FrameLayout>
-
-        <RelativeLayout
-            android:id="@+id/btnEditarPerfil"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="@drawable/rounded_button_yellow"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:clipToOutline="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/titulos"
-                android:text="Editar Perfil"
-                android:textSize="24sp"
-                android:textColor="@android:color/black"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="16dp" />
-
-
-            <ImageView
-                android:id="@+id/ic_editar_perfil"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:src="@drawable/editar_perfil"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="24dp"
-                android:layout_centerVertical="true"/>
-        </RelativeLayout>
         <RelativeLayout
             android:id="@+id/btnRegisterVaccines"
             android:layout_width="match_parent"
