--- a/app/src/main/res/layout/activity_registrar_vacuna.xml
+++ b/app/src/main/res/layout/activity_registrar_vacuna.xml
@@ -6,6 +6,7 @@
     android:fillViewport="true">
 
     <RelativeLayout
+        android:id="@+id/layoutPrincipal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
@@ -60,7 +61,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Selecciona una de tus mascotas"
+                android:text="Selecciona una de las mascotas"
                 android:textSize="16sp"
                 android:fontFamily="@font/titulos"
                 android:textColor="#555555"
